AB#206354: Fixed alignment for icons.

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-hero-module/_recipe-hero-module.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/recipe-hero-module/_recipe-hero-module.scss
@@ -152,6 +152,10 @@ $xl-gap-width: 30px;
     padding: 25px 30px;
     border-bottom: none;
     border-right: 1px solid rgba(196, 196, 196, 0.6);
+
+    &:first-child {
+      margin-left: -30px;
+    }
   }
 
   &__icon-container {
